# LCDLLN-test

./: .gitattributes  .gitignore  .trivyignore  BUILD_CHECK.md  CLAUDE.md  CMANGOS_ANALYSIS.md  CMakeLists.txt  CMakePresets.json  CODEBASE_MAP.md  README.md  build_hlod.bat  build_impostors.bat  carte.json  config.json  main.cpp  main_client.cpp  main_server.cpp  map-viewer-v17.html  smtp.local.json.example  vcpkg.json
engine/server/: AccountRecord.h  AccountRoleService.cpp  AccountRoleService.h  AccountStore.h  AccountValidation.cpp  AccountValidation.h  AntiBotTests.cpp  AuctionHouse.cpp  AuctionHouse.h  AuctionHouseRuntime.cpp  AuctionHouseRuntime.h  AuthRegisterHandler.cpp  AuthRegisterHandler.h  BotDetector.h  CMakeLists.txt  CaptchaVerifier.h  CharacterCreateHandler.cpp  CharacterDeleteHandler.h  CharacterEnterWorldHandler.cpp  CharacterListHandler.cpp  CharacterListHandler.h  CharacterPersistence.cpp  CharacterPersistence.h  CharacterSavePositionHandler.h  ChatCommandParser.cpp  ChatCommandParser.h  ChatRelayHandler.cpp  ChatRelayHandler.h  ConnectionDDoSProtector.h  ConnectionDDoSProtectorTests.cpp  ConnectionSessionMap.cpp  ConnectionSessionMap.h  CraftingSystem.cpp  CraftingSystem.h  CurrencyConfig.cpp  EventRuntime.cpp  EventRuntime.h  FriendSystem.cpp  GatheringSystem.cpp  GatheringSystem.h  (+85 more)
engine/server/ai/: EventAI.cpp
engine/server/anticheat/: AntiCheatGameplay.h
engine/server/arena/: ArenaTeamTests.cpp
engine/server/auction/: AuctionHouseBot.h  AuctionHouseBotTests.cpp
engine/server/chat/: ChatChannelRegistry.cpp  ChatChannelRegistry.h  ChatChannelRegistryTests.cpp  ChatCommandRouter.cpp  ChatCommandRouter.h  ChatCommandRouterTests.cpp  ChatGate.cpp  ChatGate.h  ChatGateTests.cpp  ChatSanitizer.cpp  ChatSanitizer.h
engine/server/cinematics/: CinematicSequenceTests.cpp
engine/server/combat/: ThreatList.h  ThreatListTests.cpp
engine/server/db/: ConnectionPool.cpp  ConnectionPool.h  DbHelpers.cpp  DbHelpers.h  SQLStorage.h  SQLStorageTests.cpp  SqlDelayThread.cpp  SqlDelayThread.h  SqlPreparedStatement.cpp
engine/server/formulas/: FormulasTests.cpp
engine/server/gmtickets/: GmTicketSystem.h
engine/server/lfg/: LfgQueue.h
engine/server/loot/: LootTable.cpp  LootTableTests.cpp
engine/server/mail/: InMemoryMailStore.h  Mail.h  MailManagerTests.cpp  MysqlMailStore.cpp
engine/server/messager/: Messager.h
engine/server/metric/: MetricRegistryTests.cpp
engine/server/outdoorpvp/: OutdoorPvPManager.h
engine/server/packetlog/: PacketLog.h  PacketLogTests.cpp
engine/server/pools/: PoolManager.h
engine/server/quests/: QuestStateTests.cpp
engine/server/reputation/: ReputationManagerTests.cpp
engine/server/skills/: SkillBookTests.cpp
engine/server/social/: IgnoreList.h  IgnoreListTests.cpp  MysqlIgnoreStore.cpp  MysqlIgnoreStore.h
engine/server/spell/: SpellFamilyMask.h  SpellFamilyMaskTests.cpp
engine/server/weather/: WeatherManager.h
src/: CMakeLists.txt  CMakeLists.txt.old
src/client/: AdvancedCombatUi.cpp  AdvancedCombatUi.h  AoEPreviewSystem.cpp  AoEPreviewSystem.h  AuctionUi.cpp  AuctionUi.h  AuraFXSystem.cpp  AuraFXSystem.h  AuthUi.h  BuffBarPresenter.cpp  BuffBarPresenter.h  CharacterCreationUi.cpp  ChatUi.cpp  ChatUi.h  ChatWorldVisualPresenter.cpp  ChatWorldVisualPresenter.h  CombatHud.cpp  CombatHud.h  CraftingUi.cpp  CraftingUi.h  FXManager.cpp  FXManager.h  FriendsUi.cpp  GameplayUdpClient.cpp  GameplayUdpClient.h  HarvestCastBar.cpp  HarvestCastBar.h  HudLayoutEditor.cpp  InventoryUi.cpp  InventoryUi.h  LocalizationService.cpp  LocalizationService.h  LocalizationServiceTests.cpp  PartyHud.cpp  PartyHud.h  ProfilerHud.cpp  ProfilerHud.h  QuestUi.cpp  QuestUi.h  SettingsMenuUi.cpp  (+12 more)
src/client/app/: Engine.cpp  Engine.h
src/client/arena/: ArenaUi.cpp  ArenaUi.h
src/client/auction/: AuctionUi.cpp  AuctionUi.h
src/client/audio/: AudioEngine.cpp  AudioEngine.h  FootstepAudioSurfaceHook.cpp  FootstepAudioSurfaceHook.h  MaMenuMusic.cpp  MaMenuMusic.h
src/client/auth/: AuthUi.h  AuthUiPresenterCore.cpp  AuthUiPresenterNative.cpp  AuthUiPresenterSettings.cpp
src/client/battleground/: BattleGroundUi.cpp  BattleGroundUi.h
src/client/character_creation/: CharacterCreationUi.cpp  CharacterCreationUi.h  CharacterCustomization.h  CharacterCustomizationSystem.cpp  (+1 more)
src/masterd/: CMakeLists.txt  InteractiveStateRelay.h  main_linux.cpp
src/shardd/: CMakeLists.txt  main_linux.cpp  main_win.cpp
src/shared/: CMakeLists.txt
src/world_editor/: AddLakeCommand.cpp  AddLakeCommand.h  AddRiverCommand.cpp  AddRiverCommand.h  BridgeTool.h  CollisionPreviewCamera.cpp  CollisionPreviewCamera.h  CommandStack.cpp  DeleteCommand.cpp  DeleteCommand.h  EditorCameraController.cpp  FieldTool.cpp  FieldTool.h  FoliageDocument.h  FoliagePaintCommand.h  FoliagePaintTool.cpp  FoliagePaintTool.h  ForestFieldGen.cpp  ForestFieldGen.h  ForestRecipe.h  ForestTool.cpp  ForestTool.h  GameplayZoneCommand.h  HamletGen.cpp  HamletGen.h  HamletGeneratorTool.h  HazardCommand.h  HazardDocument.h  HazardTool.cpp  HazardTool.h  IPanel.h  InteractivePanel.cpp  InteractivePanel.h  LakeTool.cpp  LakeTool.h  LayersDocument.cpp  LayersDocument.h  PlacementCommand.h  PlacementDocument.h  PlacementGeometry.cpp  (+47 more)
tools/gen_terrain_placeholders/: CMakeLists.txt  main.cpp
tools/hlod_builder/: CMakeLists.txt  Clustering.cpp  Clustering.h  ManifestParser.cpp  ManifestParser.h  MeshLoader.cpp  MeshLoader.h  MeshMerge.cpp  MeshMerge.h  PakWriter.cpp  PakWriter.h  ScanManifest.cpp  ScanManifest.h  Types.h  main.cpp
tools/impostor_builder/: CMakeLists.txt  FORMAT.md  GltfMeshLoader.cpp  GltfMeshLoader.h  ImpostorFormat.cpp  ImpostorFormat.h  OctahedralMap.h  Rasterizer.cpp  Rasterizer.h  main.cpp
tools/load_tester/: CMakeLists.txt  LoadTester.cpp  LoadTester.h  main.cpp
tools/migration_checksum/: CMakeLists.txt  main.cpp
tools/texr_builder/: CMakeLists.txt  TexrPack.cpp  TexrPack.h  main.cpp
tools/zone_builder/: CMakeLists.txt  ChunkPackageWriter.cpp  ChunkPackageWriter.h  GltfImporter.cpp  JsonDocument.cpp  LayoutImporter.cpp  main.cpp
(+4723 files in other folders)
